поправил миграции, добавил авторизацию/регистрацию, jwt токен, общий интерфейс для валидируемых моделей для резолвера

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@
 # PHPUnit
 /app/phpunit.xml
 /phpunit.xml
+
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
