логика для получения похожих книг, перенес константу на другой уровень абстракции, gitignore для сваггера и миграций, приоритет для bookBest при матче урла

--- a/config/packages/nelmio_api_doc.example.yaml
+++ b/config/packages/nelmio_api_doc.example.yaml
@@ -1,7 +1,7 @@
 nelmio_api_doc:
     documentation:
         servers:
-            - url: # base url
+            - url: http://api.manning.dev
         info:
             title: API for manning.com
             description: https://github.com/AlexanderVolik98/symfony-api
